' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' avoid issues with crow's feet
skinparam linetype ortho

entity "Haus" {
  * id: integer <<generated>>
  --
  * version: integer
  * art: text
  * stockwerk: integer
  * zimmer: integer
  * preis: decimal(10,2)
  * groesse: decimal(10,2)
  * standort: text
    schlagwoerter: text[]
}

entity "Ausstattung" {
  * id: integer <<generated>>
  --
  * keller: boolean
  * garten: boolean
  * garage: boolean
  * **haus_id**: integer <<FK>>
}

entity "Bewohner" {
  * id: integer <<generated>>
  --
  * vorname: text
  * nachname: text
  * alter: integer
  * beruf: text
  * **haus_id**: integer <<FK>>
}

' Relationships
Haus ||..|| Ausstattung
Haus ||..o{ Bewohner

footer (c) Jürgen Zimmermann

@enduml
